myreader-frontend/src/app/js/components/EntryList/Entry/EntryTitle/EntryTitle.css
.my-entry-title__title {
    color: rgba(0, 0, 0, 0.87);
    display: block;
    font-size: 16px;
    font-weight: 400;
    letter-spacing: 0.01em;
    margin: 0 0 6px;
    text-decoration: none;
    -webkit-tap-highlight-color: transparent;
}

.my-entry-title__title:active {
    background-color: transparent;
}

.my-entry-title__subtitle {
    display: flex;
    align-items: center;
    font-size: 14px;
    letter-spacing: 0.01em;
}

@media (max-width: 599px) {
    .my-entry-title__subtitle > span {
        flex-grow: 1;
    }
}

